Number Guess Game project completed

--- a/Projects/Color_project/index.html
+++ b/Projects/Color_project/index.html
@@ -6,7 +6,8 @@
     <title>BG color Changer</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><div class="container"><span class="buttons" id="green"></span>
+<body><div class="container">
+    <span class="buttons" id="green"></span>
     <span class="buttons" id="red"></span>
     <span class="buttons" id="purple"></span>
     <span class="buttons" id="blue"></span></div>
