--- a/Async/basics.html
+++ b/Async/basics.html
@@ -11,20 +11,20 @@
     <button>Change</button>
 </body>
 <script>
-//First way to set setTimeout
+// //First way to set setTimeout taking parameter as a function
 
-    // setTimeout(function(){
-    //     console.log("Vipul Thakur Is the Best Coder");
-    // },2000)
+//     setTimeout(function(){
+//         console.log("Vipul Thakur Is the Best Coder");
+//     },2000)
 
-//setTimeout Taking handler so we give reference of function so..
+// //setTimeout Taking handler so we give function reference of function so..
 
-    // const naam=function (){
-    //     console.log("Thakur Sahab...");
-    // }
-    // setTimeout(naam,2000);
+//     const naam=function (){
+//         console.log("Thakur Sahab...");
+//     }
+//     setTimeout(naam,2000);
 
-//Changing text on website
+// //Changing text on website
 
 let heading=document.querySelector('h1');
     const ChangeHeading=function(){
